Finally Fixed Icon/Splashscreen

--- a/www/index.html
+++ b/www/index.html
@@ -38,7 +38,7 @@
 <body ng-app="starter">
     <ion-pane ng-controller="AppCtrl">
       <ion-header-bar class="bar-stable">
-        <h1 class="title"><img style="height: 40px; width: 250px;text-align: center;" src="img/logo.png"></h1>
+        <h1 class="title"><div style="margin-left: auto; margin-right: auto; display: block; padding-left: 70px;"><img style="height: 40px;" src="img/logo.png"></div></h1>
       </ion-header-bar>
       <ion-content class="padding">
         <h2 style="padding: 25px 0 20px 0;margin: 0 auto; text-align: center;">Say The Word</h2>
