--- a/www/index.html
+++ b/www/index.html
@@ -41,6 +41,26 @@
         <h1 class="title"><div style="margin-left: auto; margin-right: auto; display: block; padding-left: 70px;"><img style="height: 40px;" src="img/logo.png"></div></h1>
       </ion-header-bar>
       <ion-content class="padding">
+        <h2 style="padding: 25px 0 20px 0;margin: 0 auto; text-align: center;">Select Your Native Language</h2>
+        <div class="list">
+
+          <label class="item item-input item-select">
+            <div class="input-label">
+              Language
+            </div>
+            <select ng-model="nativeLanguage" ng-change="changeLocale(nativeLanguage)">
+              <option value="en-GB" selected="selected">English (UK)</option>
+              <option value="en-US" selected="selected">English (US)</option>
+              <option value="nl-BE" selected="selected">Dutch (Belgium)</option>
+              <option value="it-IT" selected="selected">Italian (Italy)</option>
+              <option value="fr-FR" selected="selected">French (France)</option>
+              <option value="de-DE" selected="selected">German (Germany)</option>
+              <option value="es-ES" selected="selected">Spanish</option>
+            </select>
+          </label>
+
+        </div>
+
         <h2 style="padding: 25px 0 20px 0;margin: 0 auto; text-align: center;">Say The Word</h2>
         <div class="list list-inset">
           <label class="item item-input">
@@ -59,6 +79,7 @@
               <option value="en-GB" selected="selected">English (UK)</option>
               <option value="en-US" selected="selected">English (US)</option>
               <option value="nl-BE" selected="selected">Dutch (Belgium)</option>
+              <option value="it-IT" selected="selected">Italian (Italy)</option>
               <option value="fr-FR" selected="selected">French (France)</option>
               <option value="de-DE" selected="selected">German (Germany)</option>
               <option value="es-ES" selected="selected">Spanish</option>
@@ -93,6 +114,7 @@
               <option value="en-GB" selected="selected">English (UK)</option>
               <option value="en-US" selected="selected">English (US)</option>
               <option value="nl-BE" selected="selected">Dutch (Belgium)</option>
+              <option value="it-IT" selected="selected">Italian (Italy)</option>
               <option value="fr-FR" selected="selected">French (France)</option>
               <option value="de-DE" selected="selected">German (Germany)</option>
               <option value="es-ES" selected="selected">Spanish</option>
